[metadata]
name= matplotlib_backend_qtquick
version= 0.0.1
author= Jovan Mitrevski
author_email = j.p.mitrevski@gmail.com
description = A QtQuick backend for matplotlib2
long_description= file: README.md
long_description_content_type = text/markdown
url= https://github.com/dmatos2012/matplotlib_backend_qtquick
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
install_requires =
    matplotlib
